fix: text overflow on mobile auto rotate

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -618,7 +618,7 @@ pre code {
    main {
       color: #333;
       flex: 1 1 auto ;
-      width: 30.67%;/*53.67%;*/
+      width: 32.67%;/*53.67%;*/
       min-height: 35rem;
       max-height: 700rem;
       padding-top: 5rem;
@@ -633,8 +633,7 @@ pre code {
       color: #222;
       background-color: white; 
       flex: 0 0 auto;
-      width: 38.67%;/*25.67%;*/
-      font-size: small;
+      width: 36.67%;/*25.67%;*/
       flex-direction: column;
       padding-top: 5rem;
       padding-right: 1rem;
@@ -704,7 +703,7 @@ pre code {
       background-color: whitesmoke; 
       flex: 1 1 auto;
       width: 100%;/*25.67%;*/
-      font-size: large;
+      font-size: small;
       flex-direction: column;
       padding-top: 0rem;
       padding-bottom: 0rem;
